syntax = "proto3";

// This file is generated by github.com/TBD54566975/ftl/backend/schema/protobuf.go, DO NOT MODIFY
package xyz.block.ftl.v1.schema;

import "xyz/block/ftl/v1/schema/runtime.proto";

option go_package = "github.com/TBD54566975/ftl/protos/xyz/block/ftl/v1/schema;schemapb";
option java_multiple_files = true;

message Array {
  optional Position pos = 1;
  Type element = 2;
}

message Bool {
  optional Position pos = 1;
}

message Data {
  optional Position pos = 1;
  string name = 2;
  repeated Field fields = 3;
  repeated Metadata metadata = 4;
  repeated string comments = 5;
}

message DataRef {
  optional Position pos = 1;
  string name = 2;
  string module = 3;
}

message Decl {
  oneof value {
    Data data = 1;
    Verb verb = 2;
  }
}

message Field {
  optional Position pos = 1;
  string name = 2;
  repeated string comments = 3;
  Type type = 4;
}

message Float {
  optional Position pos = 1;
}

message IngressPathComponent {
  oneof value {
    IngressPathLiteral ingressPathLiteral = 1;
    IngressPathParameter ingressPathParameter = 2;
  }
}

message IngressPathLiteral {
  optional Position pos = 1;
  string text = 2;
}

message IngressPathParameter {
  optional Position pos = 1;
  string name = 2;
}

message Int {
  optional Position pos = 1;
}

message Map {
  optional Position pos = 1;
  Type key = 2;
  Type value = 3;
}

message Metadata {
  oneof value {
    MetadataCalls calls = 1;
    MetadataIngress ingress = 2;
  }
}

message MetadataCalls {
  optional Position pos = 1;
  repeated VerbRef calls = 2;
}

message MetadataIngress {
  optional Position pos = 1;
  string method = 2;
  repeated IngressPathComponent path = 3;
}

message Module {
  optional ModuleRuntime runtime = 31634;

  optional Position pos = 1;
  string name = 2;
  repeated string comments = 3;
  repeated Decl decls = 4;
}

message Optional {
  optional Position pos = 1;
  optional Type type = 2;
}

message Position {
  string filename = 1;
  int64 line = 2;
  int64 column = 3;
}

message Schema {
  optional Position pos = 1;
  repeated Module modules = 2;
}

message String {
  optional Position pos = 1;
}

message Time {
  optional Position pos = 1;
}

message Type {
  oneof value {
    Int int = 1;
    Float float = 2;
    String string = 3;
    Bool bool = 4;
    Time time = 5;
    Array array = 6;
    Map map = 7;
    DataRef dataRef = 8;
    Optional optional = 9;
  }
}

message Verb {
  optional VerbRuntime runtime = 31634;

  optional Position pos = 1;
  string name = 2;
  repeated string comments = 3;
  DataRef request = 4;
  DataRef response = 5;
  repeated Metadata metadata = 6;
}

message VerbRef {
  optional Position pos = 1;
  string name = 2;
  string module = 3;
}
